# hand_snn

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo_hand.launch
models/coloredbox/: model.config  model.sdf
rviz/: config.rviz
scripts/: hand_init_pose.py
urdf/: hand_table.urdf.xacro
worlds/: hand.world
