<?xml version="1.0"?>
<package format="2">
  <name>hand_snn</name>
  <version>0.0.0</version>
  <description>The hand_snn package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="aioikono@pme.duth.com">Katerina Oikonomou</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


    <!-- Dependencies needed to compile this package. -->
    <build_depend>roslib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>sr_robot_msgs</build_depend>
    <build_depend>control_msgs</build_depend>
    <build_depend>controller_manager_msgs</build_depend>
    <build_depend>sr_utilities</build_depend>
    <build_depend>diagnostic_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>self_test</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>gazebo_msgs</build_depend>
    <build_depend>gazebo</build_depend>
    <build_depend>rostest</build_depend>
    <build_depend>robotiq_3f_gripper_visualization</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <exec_depend>roslib</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>sr_robot_msgs</exec_depend>
    <exec_depend>control_msgs</exec_depend>
    <exec_depend>controller_manager_msgs</exec_depend>
    <exec_depend>sr_utilities</exec_depend>
    <exec_depend>diagnostic_msgs</exec_depend>
    <exec_depend>dynamic_reconfigure</exec_depend>
    <exec_depend>self_test</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>gazebo_msgs</exec_depend>
    <exec_depend>gazebo_ros</exec_depend>
    <exec_depend>gazebo</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>ros_ethercat_model</exec_depend>
    <exec_depend>position_controllers</exec_depend>
    <exec_depend>robotiq_3f_gripper_visualization</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
